# codebase-ai-prompt-generator

./: .gitignore  README.md  cli_test_output.md  pyproject.toml  pyrightconfig.json  test_git_exclude.md  test_output.md  with_gitignore.md  without_gitignore.md
.github/workflows/: ci.yml  publish.yml  test.yml
codebase_prompt_gen/: __init__.py  core.py
codebase_prompt_gen/cli/: __init__.py  main.py
scripts/: __init__.py  prepare_release.py
tests/: __init__.py  test_cli.py  test_core.py
typings/gitignore_parser/: __init__.pyi
