[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-ai-prompt-generator"
version = "0.1.0"
description = "Generate AI prompts from Git repositories with file tree structures and content"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ai", "prompt", "git", "code", "repository", "cursor", "ai-assistant"]
authors = [
    {name = "Yiping Deng", email = "yiping.deng.98@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/DengYiping/codebase-ai-prompt-generator"
"Bug Tracker" = "https://github.com/DengYiping/codebase-ai-prompt-generator/issues"
"Documentation" = "https://github.com/DengYiping/codebase-ai-prompt-generator#readme"

[project.scripts]
codebase-prompt = "codebase_prompt_gen.cli.main:main"

[tool.setuptools]
packages = ["codebase_prompt_gen", "codebase_prompt_gen.cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[[tool.uv.index]]
url = "https://private.hubteam.com/pypi/simple/"
default = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I", "W", "C90", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF", "PLC", "PLE", "PLR", "PLW"]
ignore = ["D203", "D212", "ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "ANN", "D"]

[tool.ruff.isort]
known-first-party = ["codebase_prompt_gen"]

[tool.ruff.mccabe]
max-complexity = 10
